--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "dat.gui": "^0.7.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "stats.js": "^0.17.0",
     "three": "^0.120.1"
   }
