--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "dev": "parcel src/index.html -p 1234",
-    "build": "parcel build src/index.html --public-url /g/connect-four  --out-dir /dist"
+    "build": "parcel build src/index.html --public-url /g/connect-four  --out-dir $OUT_DIR"
   },
   "keywords": [],
   "author": "",
